fixed layout issue with card button

--- a/css/style.css
+++ b/css/style.css
@@ -357,16 +357,18 @@ hr {
 .back-button {
     font-weight: lighter;
     position: absolute;
-    right: 0;
-    top: 0;
-    text-align: right;
-    background: none;
-    color: gray;
-    border: none;
-    width: 50%;
+    background: rgba(236, 236, 236);
+    text-align: center;
+    right: 5px;
+    top: 5px;
+    color: black;
+    border: 1px solid lightgray;
+    width: 40%;
     white-space: nowrap;
-    ;
-    text-decoration: underline;
+    text-decoration: none;
+    font-size: 13px;
+    transition-duration: .3s;
+    border-radius: 3px;
 }
 
 .back-button {
@@ -718,18 +720,10 @@ hr {
         gap: 1rem;
     }
 
-    .staff-button,
-    .back-button {
-        text-align: center;
-        background: rgba(236, 236, 236);
-        text-decoration: none;
-        transition-duration: .4s;
-        border-radius: 3px;
-    }
-
     .staff-button:hover,
     .back-button:hover {
-        background: rgba(190, 190, 190);
+        background: rgb(161, 161, 161);
+        border: 1px solid black;
         color: white;
     }
 
